--- a/src/components/common/Display.scss
+++ b/src/components/common/Display.scss
@@ -5,11 +5,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  overflow-y: scroll;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
 
   img {
     width: 30vw;
